--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "*"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@testing-library/react": "^9.4.0",
     "eslint": "^6.6.0",
     "jest": "^24.9.0",
