--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@navigationjs/react",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Small and well-tested React navigation",
   "main": "dist/index.js",
   "author": "Ivan Zotov <me@ivanzotov.com> (http://ivanzotov.com/)",
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-react": "^7.7.4",
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^24.9.0",
