--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.7.4",
     "@testing-library/react": "^9.4.0",
     "babel-jest": "^24.9.0",
@@ -53,7 +54,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@navigationjs/core": "^0.10.0",
-    "@railsmob/events": "^0.2.0"
+    "@navigationjs/core": "0.10.1",
+    "@railsmob/events": "0.2.1"
   }
 }
